# entagle

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_implementation.yml
apps/desktop-client/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop-client/src/: App.tsx  index.css
apps/desktop-client/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop-client/src-tauri/capabilities/: default.json
apps/desktop-client/src-tauri/icons/: icon.icns
apps/desktop-client/src-tauri/src/: commands.rs  main.rs  session.rs  signaling.rs  state.rs
apps/desktop-client/src/components/: ConnectionCard.tsx  Logo.tsx  SessionToolbar.tsx  StatusIndicator.tsx  VideoCanvas.tsx
apps/desktop-client/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
apps/desktop-client/src/hooks/: useRemoteStream.ts
apps/signaling-server/: Cargo.toml
apps/signaling-server/src/: main.rs
crates/capture/: Cargo.toml
crates/capture/src/: error.rs  frame.rs  lib.rs  macos.rs  traits.rs
crates/crypto-session/: Cargo.toml
crates/crypto-session/src/: error.rs  lib.rs  session.rs
crates/encoder/: Cargo.toml
crates/encoder/src/: error.rs  lib.rs  openh264_encoder.rs  traits.rs
crates/input-injector/: Cargo.toml
crates/input-injector/src/: error.rs  lib.rs  macos.rs  traits.rs
crates/net-transport/: Cargo.toml
crates/net-transport/src/: congestion.rs  error.rs  lib.rs  transport.rs
crates/shared-protocol/: Cargo.toml
crates/shared-protocol/src/: error.rs  input.rs  lib.rs  packets.rs  session.rs
scripts/: dev.sh
