[workspace]
resolver = "2"
members = [
    "apps/desktop-client/src-tauri",
    "apps/signaling-server",
    "crates/shared-protocol",
    "crates/capture",
    "crates/encoder",
    "crates/net-transport",
    "crates/input-injector",
    "crates/crypto-session",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Parevo <team@parevo.co>"]
license = "MIT"
repository = "https://github.com/parevo/entangle"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
webrtc-util = "0.9"

# Cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Encoding
openh264 = "0.6"

# Tauri
tauri = { version = "2.2", features = [] }
tauri-build = "2.0"

# Web Framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
bytes = "1.9"
parking_lot = "0.12"
crossbeam-channel = "0.5"
dashmap = "6.1"

# Platform Specific (declared here, pulled by crates for specific targets)
screencapturekit = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
